[package]
name = "db-sqlx-tester"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/tyrchen/"
homepage = "https://github.com/tyrchen/"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
futures = "0.3.27"
sqlx = { version = "0.6.3", features = ["uuid"] }
