[package]
name = "db-sqlx-tester"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/tyrchen/"
homepage = "https://github.com/tyrchen/"
description = "learn from tyrchen"
description_ch = "一个用prostgres测试sqlx的简单工具，测试完会自动创建数据库，并且测试完成后drop它"

readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }
uuid = { version = "1.3.0", features = ["v4"] }
tokio = { version = "1.27.0", features = ["macros","rt","rt-multi-thread"] }
